# grid2demand

./: .gitignore  README.md  README_pkg.md  TODO.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tutorial_demand_from_TAZ.py  tutorial_demand_from_grid_use_zone_id_in_node.py  tutorial_demand_from_grid_use_zone_id_in_node_Colab.ipynb
.github/workflows/: build_wheels.yml  pylint.yml  pytest.yml
datasets/demand_from_TAZ/Avondale_AZ_TAZ_are_centroids/: node(1).csv
datasets/demand_from_TAZ/SF_TAZ_are_centroids/: demand(1).csv  node(1).csv
datasets/demand_from_TAZ/SF_demo_TAZ_are_centroids/: demand(1).csv  node(1).csv
datasets/demand_from_TAZ/Sioux_Falls_TAZ_are_centroids/: demand(1).csv  node(1).csv  zone.csv
datasets/demand_from_TAZ/Tuscon_TAZ_are_centroids/: node(1).csv
datasets/demand_from_TAZ/poi_02_TAZ_are_polygons/: calc_area_from_polygom.py  node(1).csv  node.csv
datasets/demand_from_grid_use_zone_id_in_node/ASU/auto/: agent(1).csv  agent.csv  demand(1).csv  node(1).csv  poi.csv  zone.csv
datasets/demand_from_grid_use_zone_id_in_node/ASU/bike/: poi.csv
datasets/demand_from_grid_use_zone_id_in_node/ASU/walk/: poi.csv
datasets/demand_from_grid_use_zone_id_in_node/DC_Downtown/: demand(1).csv  node(1).csv  node.csv  zone.csv
datasets/demand_from_grid_use_zone_id_in_node/SF_demo/: demand(1).csv  node(1).csv  zone.csv
datasets/demand_from_grid_use_zone_id_in_node/dubai/: demand(1).csv  node(1).csv  poi.csv  zone.csv
datasets/demand_from_zone_id_in_node/ASU/auto/: zone.csv
docs/: calc_area_from_polygon.py
grid2demand/: __init__.py  _grid2demand.py
grid2demand/func_lib/: __init__.py  gen_agent_demand.py  gen_zone.py  gravity_model.py  plot_gd.py  plot_net.py  read_node_poi.py  read_zone.py  save_results.py  trip_rate_production_attraction.py
grid2demand/utils_lib/: __init__.py  net_utils.py  pkg_settings.py  utils.py
src/: demand_to_abst_scenario.py  grid2demand.py
tests/: test_read_node.py
tutorial/: Colab SF_Example.ipynb  Colab_ASU_Example.ipynb  demand_from_TAZ.py  demand_from_grid_detailed.py  demand_from_grid_simple.py  demand_from_grid_use_zone_id_in_node.py  demand_from_zone_id_in_node.py
