[build-system]
requires = ["setuptools>=77.0", "wheel", "twine", "scikit-build", "cmake", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grid2demand"
version = "1.0.5"
description = "A tool for generating zone-to-zone travel demand based on grid cells or TAZs using gravity model"
authors = [
    {name = "Xiangyong Luo", email = "luoxiangyong01@gmail.com"},
    {name = "Xuesong Simon Zhou", email = "xzhou74@asu.edu"},
]
maintainers = [
    {name = "Xiangyong Luo", email = "luoxiangyong01@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    'Intended Audience :: Developers',
    "Operating System :: OS Independent",
    'Topic :: Software Development :: Libraries'
]

readme = "README.md"

requires-python = ">=3.10"
keywords = ["demand", "gravity model", "travel demand", "zone-to-zone demand", "grid cells", "TAZs"]

dynamic = ["dependencies"]

[project.urls]
"Homepage" = 'https://github.com/xyluo25/grid2demand'
"Documentation" = 'https://github.com/xyluo25/grid2demand'
"Bug_Tracker" = 'https://github.com/xyluo25/grid2demand/issues'

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
# optional-dependencies = {file = ["requirements_dev.txt"]}

[tool.setuptools]
include-package-data = true
license-files = []  # must include to avoid error from twine

[tool.setuptools.packages.find]
where = ["."]
include = ["grid2demand", "grid2demand.*"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", '*.yaml', '*.zip', '*.json']
data_lib = ["*.txt", "*.rst", '*.yaml', '*.zip', '*.json']
test_data = ["*.txt", "*.rst", '*.yaml', '*.zip', '*.json']

[tool.cibuildwheel]
build = "*"
# skip = "cp3{6,7,8,9}-*"


[tool.scikit-build]
wheel.packages = ["grid2demand"]
wheel.install-dir = "grid2demand"
wheel.expand-macos-universal-tags = true

cmake.version = ">=3.25"
cmake.args = ["-DBUILD_GRID2DEMAND_EXE=OFF"]
cmake.build-type = "Release"
cmake.verbose = true

sdist.include = [
    "docs",
    "python"
]

sdist.exclude = [
  ".github",
  ".gitattributes",
  ".gitignore",
  "build"
]